# server/AP.Identity.Internal/Models/SigninResponse.cs
@@ -1,5 +1,4 @@
-﻿using System.Text.Json.Serialization;
-using AP.Identity.Internal.Models;
+﻿using AP.Common.Models;
 using AP.Common.Services.Contracts;
 
 namespace AP.Identity.Internal.Models;
@@ -11,11 +10,10 @@ public record SigninResponse : IMapFrom<UserOutput>
     public string? LastName { get; set; }
     public required string Email { get; set; }
     public string? Phone { get; set; }
-    public byte RoleId { get; set; }
-    public string? RoleName { get; set; }
+    public List<TenantRole>? TenantRoles { get; set; } = [];
     public bool Active { get; set; }
     public bool IsVerified { get; set; }
-    public DateTime Created { get; set; }
+    public DateTime CreatedOn { get; set; }
 
     public string? FullName => $"{FirstName} {LastName}";
 }
